--- a/Django_Girls/djangogirls/blog/templates/blog/post_list.html
+++ b/Django_Girls/djangogirls/blog/templates/blog/post_list.html
@@ -10,6 +10,12 @@
     <h1><a href="/">Django Girls Blog</a></h1>
   </div>
 
-{{ posts }}
+{% for post in posts %}
+  <div>
+    <p>created: {{ post.created_date}}</p>
+    <h2><a href="">{{post.title}}</a></h2>
+    <p>{{ post.text | linebreaksbr}}</p>
+  </div>
+{% endfor %}
 </body>
 </html>
