--- a/Django_Girls/djangogirls/blog/templates/blog/post_list.html
+++ b/Django_Girls/djangogirls/blog/templates/blog/post_list.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ola's blog</title>
-</head>
-<body>
-  <div>
-    <h1><a href="/">Django Girls Blog</a></h1>
-  </div>
+{% extends 'blog/base.html' %}
 
-{% for post in posts %}
-  <div>
-    <p>created: {{ post.created_date}}</p>
-    <h2><a href="">{{post.title}}</a></h2>
-    <p>{{ post.text | linebreaksbr}}</p>
-  </div>
-{% endfor %}
-</body>
-</html>
+{% block content %}
+  {% for post in posts %}
+    <div class="post">
+      <div>
+        <p>created: {{ post.created_date}}</p>
+      </div>
+        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h2>
+        <p>{{ post.text | linebreaksbr}}</p>
+    </div>
+  {% endfor %}
+{% endblock %}
