--- a/Django_Girls/djangogirls/blog/static/css/blog.css
+++ b/Django_Girls/djangogirls/blog/static/css/blog.css
@@ -44,6 +44,11 @@ h1, h2, h3, h4{
 .post h2 a, .post h2 a:visited{
   color: #000000;
 }
+
+.comment{
+  margin: 20px, 0px, 20px, 20px;
+}
+
 /* 
 h1 a, h2 a{
   color: #C25100;
